# gol

./: CMakeLists.txt  README.md
scripts/: CMakeLists.txt  run.py
scripts/embedfile/: CMakeLists.txt  embedfile.cpp
source/: CMakeLists.txt  double_buffer.cpp  double_buffer.h  fragment.frag  main.cpp
